Fixed burger menu icon visibility on dark mode
refs #925

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -265,6 +265,7 @@ production stylesheet in assets/built/screen.css
     font-size: 1.6rem;
     line-height: 1.3em;
     background-color: #fff;
+    z-index: 150;
 }
 
 .has-cover:not(.home-template) .gh-head {
@@ -2122,8 +2123,9 @@ html.dark-mode .gh-head {
     color: #fff;
 }
 
-html.dark-mode .gh-burger-box {
-    color: #fff;
+html.dark-mode .gh-burger::before,
+html.dark-mode .gh-burger::after {
+    background-color: #fff;
 }
 
 html.dark-mode .site-header-content {
@@ -2283,6 +2285,12 @@ html.dark-mode .footer-cta-title {
     color: #fff;
 }
 
+@media (max-width: 767px) {
+    html.dark-mode .gh-head-open #gh-head .gh-head-actions {
+        background-color: var(--color-darkmode);
+    }
+}
+
 @media (prefers-color-scheme: dark) {
     html.auto-color body {
         color: rgba(255, 255, 255, 0.75);
@@ -2306,8 +2314,9 @@ html.dark-mode .footer-cta-title {
         color: #fff;
     }
 
-    html.auto-color .gh-burger-box {
-        color: #fff;
+    html.auto-color .gh-burger::before,
+    html.auto-color .gh-burger::after {
+        background-color: #fff;
     }
 
     html.auto-color .site-header-content {
@@ -2465,6 +2474,12 @@ html.dark-mode .footer-cta-title {
 
     html.auto-color .footer-cta-title {
         color: #fff;
+    }
+
+    @media (max-width: 767px) {
+        html.auto-color .gh-head-open #gh-head .gh-head-actions {
+            background-color: var(--color-darkmode);
+        }
     }
 }
 
